examples/test/testpolicy13035.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13035
  namespace: namespace53
spec:
  podSelector:
    matchLabels:
      key17: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value30
          key16: value15
          key39: value42
      podSelector:
        matchLabels:
          key40: value46
          key47: value27
